--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -5,8 +5,8 @@
 // CONTENTS ------------
 //  - BASE VARIABLES
 //      - SIZES
-//      - FONTS
 //      - COLOURS
+//      - FONTS
 //      - SIZING
 //  - MODULE CONFIGURATION
 //      - LAYOUT
@@ -34,7 +34,27 @@
 
 
 /////////////////
-// 1.2 Fonts   //
+// 1.2 Colours //
+/////////////////
+
+$color__white: #FFFFFF;
+$color__black: #000000;
+
+$color__primary--light: #DD0000;
+$color__primary: #C10000;
+$color__primary--dark: #990000;
+
+$color__secondary--light: #00DD00;
+$color__secondary: #00C100;
+$color__secondary--dark: #009900;
+
+$color__neutral--light: #999999;
+$color__neutral: #666666;
+$color__neutral--dark: #333333;
+
+
+/////////////////
+// 1.3 Fonts   //
 /////////////////
 
 $text__family-sans:  "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -53,25 +73,13 @@ $text__size--gamma: 15;
 $text__line--gamma: 20;
 // $text__line--delta: 20 !default;
 
+// Colours
+$text__colour--base: $color__neutral--dark;
+$text__colour--alpha: $color__primary;
+$text__colour--beta: $color__primary;
+$text__colour--gamma: $text__colour--base;
+$text__colour--delta: $text__colour--base;
 
-/////////////////
-// 1.3 Colours //
-/////////////////
-
-$color__white: #FFFFFF;
-$color__black: #000000;
-
-$color__primary--light: #DD0000;
-$color__primary: #C10000;
-$color__primary--dark: #990000;
-
-$color__secondary--light: #00DD00;
-$color__secondary: #00C100;
-$color__secondary--dark: #009900;
-
-$color__neutral--light: #999999;
-$color__neutral: #666666;
-$color__neutral--dark: #333333;
 
 
 ///////////////
