Adding modular colour variables to text

--- a/assets/sass/modules/_text.scss
+++ b/assets/sass/modules/_text.scss
@@ -28,6 +28,13 @@ $text__line--beta: 28 !default;
 $text__line--gamma: 22 !default;
 $text__line--delta: 20 !default;
 
+// Colours
+$text__colour--base: #333333 !default;
+$text__colour--alpha: #990000 !default;
+$text__colour--beta: #990000 !default;
+$text__colour--gamma: #333333 !default;
+$text__colour--delta: #333333 !default;
+
 
 /////////////////////////////////
 // Mixins and Functions        //
@@ -37,7 +44,7 @@ $text__line--delta: 20 !default;
 // $size: (required) Required font size in pixels
 // $line: (required) Required line height in pixels
 // $family (optional) Font family stack string
-@mixin text($size, $line, $margin: 0, $family: $text__family-sans, $color: $color__neutral--dark, $weight: normal) {
+@mixin text($size, $line, $margin: 0, $family: $text__family-sans, $color: $text__colour--base, $weight: normal) {
     font-size: calc-em($size);
     line-height: ($line/$size);
     font-family: $family;
@@ -56,7 +63,7 @@ html {
 }
 
 body {
-    @include text($base__font-size, $base__line, $color: $color__neutral--dark);
+    @include text($base__font-size, $base__line, $color: $text__colour--base);
 }
 
 /*
@@ -70,7 +77,7 @@ Heading 1
 ```
 */
 h1 {
-    @include text($text__size--alpha, $text__line--alpha, 15, $color: $color__primary, $weight: bold);
+    @include text($text__size--alpha, $text__line--alpha, 15, $color: $text__colour--alpha, $weight: bold);
 }
 
 /*
@@ -83,7 +90,7 @@ Heading 2
 
 */
 h2 {
-    @include text($text__size--beta, $text__line--beta, 15, $color: $color__primary);
+    @include text($text__size--beta, $text__line--beta, 15, $color: $text__colour--beta);
 }
 
 /*
@@ -97,7 +104,7 @@ Heading 3
 */
 
 h3 {
-    @include text($text__size--gamma, $text__line--gamma, 15);
+    @include text($text__size--gamma, $text__line--gamma, 15, $color: $text__colour--gamma);
     text-transform: uppercase;
 }
 
@@ -112,5 +119,5 @@ Paragraph text
 */
 
 p {
-    @include text($text__size--delta, $text__line--delta, 10);
+    @include text($text__size--delta, $text__line--delta, 10, $color: $text__colour--delta);
 }
