--- a/assets/sass/modules/_lists.scss
+++ b/assets/sass/modules/_lists.scss
@@ -96,9 +96,10 @@ Numbered list
 */
 .list--number {
     counter-reset: items;
+    padding-top: calc-em(5);
 
     .list__item {
-        padding-top: calc-em(5);
+        margin-bottom: calc-em(5);
 
         &:before {
             counter-increment: items 1;
@@ -106,6 +107,10 @@ Numbered list
             color: $list__number-color;
             margin-right: calc-em(5);
         }
+    }
+
+    .list__item--end {
+        margin-bottom: 0;
     }
 }
 
