--- a/assets/sass/modules/_lists.scss
+++ b/assets/sass/modules/_lists.scss
@@ -51,9 +51,10 @@ $list__number-color: #CC0000 !default;
 // Number modifier
 .list--number {
     counter-reset: items;
+    padding-top: calc-em(5);
 
     .list__item {
-        padding-top: calc-em(5);
+        margin-bottom: calc-em(5);
 
         &:before {
             counter-increment: items 1;
@@ -61,6 +62,10 @@ $list__number-color: #CC0000 !default;
             color: $list__number-color;
             margin-right: calc-em(5);
         }
+    }
+
+    .list__item--end {
+        margin-bottom: 0;
     }
 }
 
@@ -77,6 +82,10 @@ $list__number-color: #CC0000 !default;
             @include text($text__size--beta, $text__line--beta, $color: $list__number-color);
             font-style: italic;
         }
+    }
+
+    .list__item--end {
+        margin-bottom: 0;
     }
 
 }
