--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -7,6 +7,22 @@
 /////////////////////////////////////////////////
 
 
+$color__white: #FFFFFF;
+$color__black: #000000;
+
+$color__primary--light: #DD0000;
+$color__primary: #C10000;
+$color__primary--dark: #990000;
+
+$color__secondary--light: #00DD00;
+$color__secondary: #00C100;
+$color__secondary--dark: #009900;
+
+$color__neutral--light: #999999;
+$color__neutral: #666666;
+$color__neutral--dark: #333333;
+
+
 // ## Calculates em size based on required pixel size and context.
 // $target: (required) Required pixel size
 // $context: (optional) Current font size used to calculate em value
